@startuml
hide circle
skinparam linetype ortho
skinparam packageStyle rectangle
skinparam shadowing false
skinparam defaultFontName Arial

entity "users" as users {
  * id : uuid <<PK>>
  --
  email : varchar <<UQ>>
  password_hash : varchar
  first_name : varchar
  last_name : varchar
  phone : varchar
  role : varchar
  is_active : boolean
  created_at : timestamp
  updated_at : timestamp
}

entity "restaurants" as restaurants {
  * id : uuid <<PK>>
  --
  name : varchar
  description : text
  phone : varchar
  email : varchar
  country : varchar
  city : varchar
  street : varchar
  building : varchar
  postal_code : varchar
  price_segment : varchar
  booking_policy : text
  is_active : boolean
  created_at : timestamp
  updated_at : timestamp
}

entity "cuisines" as cuisines {
  * id : uuid <<PK>>
  --
  name : varchar <<UQ>>
}

entity "restaurant_cuisines" as restaurant_cuisines {
  * restaurant_id : uuid <<FK>>
  * cuisine_id : uuid <<FK>>
}

entity "restaurant_working_hours" as restaurant_working_hours {
  * id : uuid <<PK>>
  --
  restaurant_id : uuid <<FK>>
  week_day : integer
  opens_at : time
  closes_at : time
  is_closed : boolean
}

entity "restaurant_tables" as restaurant_tables {
  * id : uuid <<PK>>
  --
  restaurant_id : uuid <<FK>>
  table_number : varchar
  seats_count : integer
  zone_name : varchar
  is_active : boolean
}

entity "restaurant_photos" as restaurant_photos {
  * id : uuid <<PK>>
  --
  restaurant_id : uuid <<FK>>
  image_url : varchar
  sort_order : integer
}

entity "menu_categories" as menu_categories {
  * id : uuid <<PK>>
  --
  restaurant_id : uuid <<FK>>
  name : varchar
  sort_order : integer
}

entity "menu_items" as menu_items {
  * id : uuid <<PK>>
  --
  restaurant_id : uuid <<FK>>
  menu_category_id : uuid <<FK>>
  name : varchar
  description : text
  price_minor : integer
  currency_code : varchar
  is_available : boolean
}

entity "bookings" as bookings {
  * id : uuid <<PK>>
  --
  user_id : uuid <<FK>>
  restaurant_id : uuid <<FK>>
  table_id : uuid <<FK>>
  status : varchar
  guests_count : integer
  starts_at : timestamp
  ends_at : timestamp
  special_requests : text
  created_at : timestamp
  updated_at : timestamp
}

entity "reviews" as reviews {
  * id : uuid <<PK>>
  --
  booking_id : uuid <<FK>>
  restaurant_id : uuid <<FK>>
  user_id : uuid <<FK>>
  rating : integer
  comment : text
  created_at : timestamp
  updated_at : timestamp
}

restaurants ||--o{ restaurant_cuisines : has
cuisines ||--o{ restaurant_cuisines : tags
restaurants ||--o{ restaurant_working_hours : works
restaurants ||--o{ restaurant_tables : owns
restaurants ||--o{ restaurant_photos : shows
restaurants ||--o{ menu_categories : groups
menu_categories ||--o{ menu_items : contains
restaurants ||--o{ menu_items : offers
users ||--o{ bookings : creates
restaurants ||--o{ bookings : receives
restaurant_tables ||--o{ bookings : assigned
bookings ||--o| reviews : basis_for
users ||--o{ reviews : writes
restaurants ||--o{ reviews : receives

@enduml
